<?php

namespace AbstractFactory\Ingredient\Dough;

interface Dough
{
    public function getName(): string;
}